force-app/main/default/objects/Environments_Order__c/Environments_Order__c.object-meta.xml
<CustomObject>
    <label>Environment Order</label>
    <nameField>
        <displayFormat>ENV-{0000}</displayFormat>
        <label>Environment Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Environment Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>