force-app/main/default/objects/Environments_Order__c/fields/Additional_Database_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Database_Details__c</fullName>
    <inlineHelpText>Additional details related to the database portion of the environment request.</inlineHelpText>
    <label>Additional Database Details</label>
    <type>TextArea</type>
</CustomField>