force-app/main/default/objects/Environments_Order__c/fields/Change_Action__c.field-meta.xml
<CustomField>
    <fullName>Change_Action__c</fullName>
    <inlineHelpText>What type of action are we asking the DBAs to take?</inlineHelpText>
    <label>Change Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>clone</fullName>
            </value>
            <value>
                <fullName>rename</fullName>
            </value>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>refresh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>