force-app/main/default/objects/Environments_Order__c/fields/Committed_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_Delivery_Date__c</fullName>
    <inlineHelpText>Date upon which the Environments Office agrees to fill the request.</inlineHelpText>
    <label>Committed Delivery Date</label>
    <type>Date</type>
</CustomField>