force-app/main/default/objects/Environments_Order__c/fields/Database_Instance__c.field-meta.xml
<CustomField>
    <fullName>Database_Instance__c</fullName>
    <inlineHelpText>What instance is the database being refreshed as?
Release Engineering may have configuration implications based on the instance.</inlineHelpText>
    <label>Database Instance</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Change_Action__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>NA1</fullName>
                <default>true</default>
                <label>NA1</label>
            </value>
            <value>
                <fullName>NA0</fullName>
            </value>
            <value>
                <fullName>NA2</fullName>
            </value>
            <value>
                <fullName>NA3</fullName>
            </value>
            <value>
                <fullName>NA4</fullName>
            </value>
            <value>
                <fullName>NA5</fullName>
            </value>
            <value>
                <fullName>NA6</fullName>
            </value>
            <value>
                <fullName>NA7</fullName>
            </value>
            <value>
                <fullName>EU0</fullName>
            </value>
            <value>
                <fullName>AP0</fullName>
            </value>
            <value>
                <fullName>AP1</fullName>
            </value>
            <value>
                <fullName>CS0</fullName>
            </value>
            <value>
                <fullName>CS1</fullName>
            </value>
            <value>
                <fullName>CS2</fullName>
            </value>
            <value>
                <fullName>CS3</fullName>
            </value>
            <value>
                <fullName>CS4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>