force-app/main/default/objects/Environments_Order__c/fields/Database_Refresh_Requested__c.field-meta.xml
<CustomField>
    <fullName>Database_Refresh_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the database to be refreshed from a stock image?</description>
    <label>Database Refresh Requested</label>
    <type>Checkbox</type>
</CustomField>