force-app/main/default/objects/Environments_Order__c/fields/Database_Refresh_Source__c.field-meta.xml
<CustomField>
    <fullName>Database_Refresh_Source__c</fullName>
    <description>what source image should be used for the refresh?</description>
    <label>Database Refresh Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Database_Refresh_Requested__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>something</fullName>
            </value>
            <value>
                <fullName>something else</fullName>
            </value>
            <value>
                <fullName>something else NA5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>