force-app/main/default/objects/Environments_Order__c/fields/DB_Schema_Request__c.field-meta.xml
<CustomField>
    <fullName>DB_Schema_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Work request for the DB schema team.</inlineHelpText>
    <label>DB Schema Request</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Environment Orders (DB Schema Request)</relationshipLabel>
    <relationshipName>Environment_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>