force-app/main/default/objects/Environments_Order__c/fields/Delivery_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the sprint of the team that will be performing the final handoff to the customer.</description>
    <inlineHelpText>This is the sprint of the team that will be performing the final handoff to the customer.</inlineHelpText>
    <label>Delivery Sprint</label>
    <referenceTo>ADM_Sprint__c</referenceTo>
    <relationshipLabel>Environment Orders</relationshipLabel>
    <relationshipName>Environment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>