force-app/main/default/objects/Environments_Order__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>