force-app/main/default/objects/Environments_Order__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <inlineHelpText>Particular measurable impact if this environment does not meet key delivery dates
ex:  delay in release, delay in feature delivery, etc.</inlineHelpText>
    <label>Impact</label>
    <type>TextArea</type>
</CustomField>