force-app/main/default/objects/Environments_Order__c/fields/Network_Case__c.field-meta.xml
<CustomField>
    <fullName>Network_Case__c</fullName>
    <inlineHelpText>Supportforce case for any network changes needed for this request</inlineHelpText>
    <label>Network Case</label>
    <type>Url</type>
</CustomField>