force-app/main/default/objects/Environments_Order__c/fields/Network_Request__c.field-meta.xml
<CustomField>
    <fullName>Network_Request__c</fullName>
    <label>Network Request</label>
    <type>TextArea</type>
</CustomField>