force-app/main/default/objects/Environments_Order__c/fields/Notification_Email_List__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_List__c</fullName>
    <description>email address that should be used to announce environment details</description>
    <inlineHelpText>Please enter the email address that should be used to announce environment details.
This should be provided by the customer.</inlineHelpText>
    <label>Notification Email List</label>
    <required>true</required>
    <type>Email</type>
</CustomField>