force-app/main/default/objects/Environments_Order__c/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the point-of-contact for this request as identified by the customer.</inlineHelpText>
    <label>POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>