force-app/main/default/objects/Environments_Order__c/fields/Release_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Release_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the Release Engineer delivering this order?</inlineHelpText>
    <label>Release Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Environment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>