force-app/main/default/objects/Environments_Order__c/fields/RelEng_Work__c.field-meta.xml
<CustomField>
    <fullName>RelEng_Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The RelEng work object supporting this environment order that will be attached to the corresponding
Release Engineering sprint.</inlineHelpText>
    <label>RelEng Work</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Environment Orders (RelEng Work)</relationshipLabel>
    <relationshipName>Environment_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>