force-app/main/default/objects/Environments_Order__c/fields/Scheduled_Maintenance_End__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Maintenance_End__c</fullName>
    <inlineHelpText>Expected conclusion of work on the environment during which time it would not be usable by the customer.</inlineHelpText>
    <label>Scheduled Maintenance End</label>
    <type>Date</type>
</CustomField>