force-app/main/default/objects/Environments_Order__c/fields/Schema_Upgrade_Path__c.field-meta.xml
<CustomField>
    <fullName>Schema_Upgrade_Path__c</fullName>
    <inlineHelpText>Select the current schema version of the database as well as the desired version.
This allows DB schema to be aware of exactly what upgrades to execute upon.</inlineHelpText>
    <label>Schema Upgrade Path</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Schema_Upgrade_Required__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>164</fullName>
            </value>
            <value>
                <fullName>166</fullName>
            </value>
            <value>
                <fullName>168</fullName>
            </value>
            <value>
                <fullName>170</fullName>
            </value>
            <value>
                <fullName>172</fullName>
            </value>
            <value>
                <fullName>174</fullName>
            </value>
            <value>
                <fullName>176</fullName>
            </value>
            <value>
                <fullName>178</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>