force-app/main/default/objects/Environments_Order__c/fields/Schema_Upgrade_Required__c.field-meta.xml
<CustomField>
    <fullName>Schema_Upgrade_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schema Upgrade Required?</label>
    <type>Checkbox</type>
</CustomField>