force-app/main/default/objects/Environments_Order__c/fields/Source_Database__c.field-meta.xml
<CustomField>
    <fullName>Source_Database__c</fullName>
    <label>Source Database</label>
    <length>10</length>
    <type>Text</type>
</CustomField>