force-app/main/default/objects/Environments_Order__c/fields/Source_Request__c.field-meta.xml
<CustomField>
    <fullName>Source_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user story against the Environments Office that provides the requirements of this environment order</inlineHelpText>
    <label>Source Request</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Environment Orders</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>