force-app/main/default/objects/Environments_Order__c/fields/Standard_PLSQL_Users__c.field-meta.xml
<CustomField>
    <fullName>Standard_PLSQL_Users__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Do you want Internal Services to prepare the standard plsql users ( 7 dwarves )?
If not, you can specify a custom set</description>
    <inlineHelpText>bashful
dopey
doc
grumpy
happy
sleepy
sneezy</inlineHelpText>
    <label>Standard PLSQL Users?</label>
    <type>Checkbox</type>
</CustomField>