force-app/main/default/objects/Environments_Order__c/fields/Supporting_Release__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What release will this environment be supporting?</inlineHelpText>
    <label>Supporting Release</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipLabel>Environment Orders</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>