force-app/main/default/objects/Environments_Order__c/fields/System_Case__c.field-meta.xml
<CustomField>
    <fullName>System_Case__c</fullName>
    <inlineHelpText>Supportforce case for any system/hardware changes required for this environment request</inlineHelpText>
    <label>System Case</label>
    <type>Url</type>
</CustomField>