force-app/main/default/objects/Environments_Order__c/fields/System_Request__c.field-meta.xml
<CustomField>
    <fullName>System_Request__c</fullName>
    <label>System Request</label>
    <type>TextArea</type>
</CustomField>