force-app/main/default/objects/Environments_Order__c/fields/Target_Database__c.field-meta.xml
<CustomField>
    <fullName>Target_Database__c</fullName>
    <label>Target Database</label>
    <length>10</length>
    <type>Text</type>
</CustomField>