force-app/main/default/objects/Environments_Order__c/recordTypes/Environment_Request.recordType-meta.xml
<RecordType>
    <fullName>Environment_Request</fullName>
    <active>true</active>
    <description>The request is logged by the customer to the Environments Office.  From the request, the order can be generated.</description>
    <label>Environment Request</label>
</RecordType>